# Quickstart

./: CMakeLists.txt  build_and_compile.sh
libs/: CMakeLists.txt
src/: main.cpp
